# snippy

./: .gitignore  Cargo.toml  README.md
prompts/: general-coding.md
snippy-content-extractor/: Cargo.toml
snippy-content-extractor/src/: applier.rs  block_extractor.rs  claude_artifact_extractor.rs  delimiter_identifier.rs  diff_handler.rs  extractor.rs  logger.rs  parser.rs
snippy-content-extractor/tests/: content_processor_applier_tests.rs  content_processor_concurrency_tests.rs  content_processor_delimiter_identifier.rs  content_processor_extractor_tests.rs  content_processor_integration_tests.rs  content_processor_logging_tests.rs  content_processor_performance_tests.rs
src/: copy.rs  errors.rs  ignore.rs  lib.rs  llm.rs  logger.rs  main.rs  reporting.rs  trie.rs  utils.rs  watch.rs
src/applier/: diff_applier.rs  full_content_applier.rs  mod.rs  search_replace_applier.rs  utils.rs
src/content_extractor/: applier.rs  block_extractor.rs  claude_artifact_extractor.rs  delimiter_identifier.rs  diff_handler.rs  errors.rs  extractor.rs  logger.rs  mod.rs
src/extractor/: markdown.rs  mod.rs
tests/: content_processor_applier_tests.rs  content_processor_concurrency_tests.rs  content_processor_delimiter_identifier.rs  content_processor_extractor_tests.rs  content_processor_integration_tests.rs  content_processor_logging_tests.rs  content_processor_performance_tests.rs  copy_git_repository_tests.rs
