[package]
name = "snippy"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
async-trait = "0.1.81"
clap = { version = "4.5.16", features = ["derive", "env"] }
tiktoken-rs = "0.5.9"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
walkdir = "2.5.0"
glob = "0.3.1"
snippy-content-extractor = { path = "./snippy-content-extractor" }

[dev-dependencies]
tempfile = "3.12.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[workspace]
resolver = "2"
members = ["snippy-content-extractor"]