[package]
name = "snippy"
version = "0.1.3"
edition = "2021"
description = "A command-line tool for that makes using LLMs for code generation a breeze"
authors = ["Nikhil Pandey <nikhil@nikhil.com.np>"]
license-file = "LICENSE"
repository = "https://github.com/nikhil-pandey/snippy"
homepage = "https://github.com/nikhil-pandey/snippy"
readme = "README.md"
keywords = ["cli", "snippet", "search", "code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.4.0"
async-trait = "0.1.81"
clap = { version = "4.5.16", features = ["derive", "env"] }
tiktoken-rs = "0.5.9"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.63"
serde = { version = "1.0.208", features = ["derive"] }
walkdir = "2.5.0"
glob = "0.3.1"
regex = "1.10.6"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.125"
diffy = "0.4.0"
markdown = "1.0.0-alpha.21"
tempfile = "3.12.0"

[dev-dependencies]
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
