[package]
name = "snippy-content-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
regex = "1.10.6"
chrono = "0.4.38"
serde = { version = "1.0.208", features = ["derive"] }
tokio = "1.39.3"
uuid = { version = "1.10.0", features = ["v4"] }
serde_json = "1.0.125"
diffy = "0.4.0"
thiserror = "1.0.63"
async-trait = "0.1.81"

[dev-dependencies]
tempfile = "3.12.0"
tokio = { version = "1.39.3", features = ["full"] }
